--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --darkpurple: #444053;
+    --darkpurpletrans: #444053a8;
     --niceblue: #6C63FF;
     --notwhite: #E6E6E6;
     --lightblue: #F0EFFF;
@@ -10,13 +11,63 @@
     --darkerred: #A0616A; 
 }
 
-body {
-    background: var(--background);
+.navbar {
+    height: 100px;
+    width: cover;
+    background-color: var(--whitestwhite);
+    overflow: hidden;
 }
-
-.h1 {
-    color: var(--kindofred);
+.navbar a {
     font-family: rockwell-nova,sans-serif;
     font-weight: 400;
+    font-size: 40px;
     font-style: normal;
+    position: relative;
+    left: 50px;
+    top: 22px;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: var(--darkpurple);
+}
+.navbar a:hover {
+    color: var(--niceblue);
+}
+.navbar a.active {
+    color: var(--niceblue);
+}
+body {
+    background-color: var(--darkpurple);
+}
+
+.Titel {
+    position: relative;
+    left: 10%;
+    margin-top: 100px;
+    color: var(--niceblue);
+    font-family: rockwell-nova,sans-serif;
+    font-weight: 400;
+    font-size: 70px;
+    font-style: normal;
+}
+#container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.makepicdarker {
+    top:0;
+    left:0;
+    height: 1398px;
+    width: cover;
+    position: absolute;
+    background-color: var(--kindofred);
+    z-index: 10;
+}
+.titelheader {
+    position: float-left;
+    background-image: url("images/Bremen\ pic.jpg");
+    aspect-ratio: auto;
+    position: absolute;
+    height: 1398px;
+    width: 2261px;
 }
