--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
     position: fixed;
     z-index: 100;
     box-shadow: 0 3px 6px #0000002c;
-    transition: height 0.8s ease;
+    transition: height 0.5s ease;
 }
 
 .expand .navbar {
@@ -174,7 +174,7 @@ body {
     position: relative;
     border-radius: 17px;
     top: 210px;
-    left: 0px;
+    left: 45px;
 
 }
 /* junge menschen machen politik */
@@ -367,25 +367,25 @@ body {
     overflow: hidden;
     background-repeat: no-repeat;
     background-image: url("artwork/contact_artwork.png");
-    background-size: 90%;
+    background-size: 100%;
     z-index: -1;
 }
 .whitebackdrop {
     top: 500px;
-    position: relative;
+    position: absolute;
     left: 0px;
     overflow: hidden;
     width: 100%;
 }
 .whitrect {
-    top: 500px;
+    top: 900px;
     width: 100%;
     left: 0px;
     height: 3000px;
     background-color: var(--whitestwhite);
     margin-top: -5px;
     overflow: hidden;
-    position: relative;
+    position: absolute;
 }
 
 .contactlinks {
