--- a/style.css
+++ b/style.css
@@ -46,10 +46,7 @@ html {
 	}
 }
 
-/* Background color */
-body {
-    background-color: var(--darkpurple);
-}
+
 /* -- navbar -- */
 
 
@@ -63,13 +60,8 @@ body {
     position: fixed;
     z-index: 100;
     box-shadow: 0 3px 6px #0000002c;
-    transition: height 0.5s ease;
+    transition: 0.5s ease;
 }
-
-.expand .navbar {
-    height: 100px;
-}
-
 .navbar a {
     font-family: rockwell-nova,sans-serif;
     font-weight: 400;
@@ -86,13 +78,14 @@ body {
     transition: color text-shadow 0.5s ease;
     color: var(--niceblue);
     text-shadow: 0px 0px 20px #6b63ff7a;
-    
 }
 .navbar a.active {
     color: var(--niceblue);
+    text-shadow: 0 0 20px var(--lightblue);
 }
 
 /* menu icon */
+
 
 .menu_icon {
     cursor: pointer;
@@ -156,23 +149,21 @@ body {
 /* ---------  Index ------------ */
 /* ----------------------------- */
 
+
 /* -- Titleheader container für title und subtitle -- */
 /* Titleheader für Index */
 .titelheader {
-    position: float-left;
-    overflow: hidden;
+    overflow: visible;
     position: absolute;
-    height: fit-content;
-    width: fit-content;
-    padding: 10px;
+    width: 90%;
+    height: 65%;
+    left: 6%;
     top: 100px;
 }
 
-/* Index- Jugendbeirat Neustadt titel */
-
 .Titel {
     position: relative;
-    left: 6%;
+    margin-left: 2%;
     margin-top: 60px;
     color: var(--lightblue);
     font-family: rockwell-nova,sans-serif;
@@ -181,27 +172,46 @@ body {
     font-style: normal;
 }
 
-/* blaues rechteck zwischen title und subtitle */
-.rect {
-    width: 1327px;
-    height: 17px;
-    background-color: var(--niceblue);
-    position: relative;
-    border-radius: 17px;
-    top: 210px;
-    left: 45px;
-
-}
-/* junge menschen machen politik */
 .subtitel {
     position: relative;
-    left: 6%;
-    margin-top: -10px;
+    margin-left: 2%;
     color: var(--lightblue);
     font-family: rockwell-nova,sans-serif;
     font-weight: 400;
     font-size: 40px;
     font-style: normal;
+}
+
+/* blaues rechteck zwischen title und subtitle */
+.rect {
+    position: absolute;
+    margin-top: 12%;
+    width: 70%;
+    height: 17px;
+    border-radius: 17px;
+    background-color: var(--niceblue);
+}
+
+/* discord btn */
+.discord_join_btn {
+    position: relative;
+    margin-top: 6%;
+    border: none;
+    cursor: pointer;
+    padding: 15px 60px;
+    border-radius: 76px;  
+    transition: all 0.25s;
+    font-family: rockwell-nova,sans-serif;
+    font-style: regular;
+    font-size: 36px;
+    color: var(--niceblue);
+    background: var(--whitestwhite);
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.335);
+}
+
+.discord_join_btn:hover {
+    background: var(--niceblue);
+    color: var(--lightblue);
 }
 
 /* Neustadt bg pic  */
@@ -219,56 +229,21 @@ body {
     background-image: url("images/Bremen\ pic.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.2;
     height: 1398px;
     left: 0px;
 }
 
-/* wave */
+/* -------------------------------- */
 
-.index_wave {
-    position: absolute;
-    top: 1000px;
-    left: 0px;
-    width: 100%;
-    overflow: hidden;
-    
-}
 .index_rectangle {
     left: 0px;
-    top: 1300px;
-    height: 3300px;
-    background-color: var(--whitestwhite);
-    margin-top: -5px;
+    top: 100%;
     overflow: hidden;
     width: 100%;
     position: absolute;
     
 }
-/* discord btn */
 
-.discord_join_btn {
-    z-index: 10;
-    position: absolute;
-    left: 110px;
-    top: 500px;
-    color: var(--niceblue);
-    background: var(--whitestwhite);
-    font-family: rockwell-nova,sans-serif;
-    font-style: regular;
-    font-size: 36px;
-    padding: 15px 60px;
-    border-radius: 76px;  
-    border: none;
-    transition: all 0.25s;
-    box-shadow: 0 0 20px rgba(255, 255, 255, 0.335);
-    cursor: pointer;
-}
-
-.discord_join_btn:hover {
-    background: var(--niceblue);
-    color: var(--lightblue);
-}
 
 /* scroll arrow */
 .scroll_arrow_home_1 {
@@ -373,33 +348,40 @@ body {
 
 /* footer */
 
+.footer {
+    position: relative;
+    width: 100%;
+  }
+
 
 .footer_links {
+    position: relative;
+    z-index: 10;
+    margin-top: 10%;
+    top: -120px;
+    float: right;
+    margin-right: 10px;
+    padding: 0 10px;
     color: var(--lightblue);
     text-decoration: none;
-    position: relative;
-    z-index: 100;
-    top: 2300px;
-    float: right;
-    left: -100px;
     font-family: rockwell-nova,sans-serif;
     font-style: light;
     font-weight: 400;
     font-size: 20px;
     transition: 0.5s;
-    padding: 0 10px;
 }
-
 .footer_links:hover {
     color: var(--nicePink);
     text-shadow: 0px 0px 20px var(--nicePink);
 }
-
+.footer_box_container  {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
 .footer_box {
     position: absolute;
     width: 100%;
-    left: 0px;
-    bottom: -3630px;
 }
 
 /* --------------------------------------------------------------- */
