--- a/site/style.css
+++ b/site/style.css
@@ -46,6 +46,9 @@ html {
 	}
 }
 
+body {
+    background-color: red;
+}
 
 /* -- navbar -- */
 
@@ -220,7 +223,7 @@ html {
     position: absolute;
     width: 100%;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     left: 0;
     top: 0;
     max-width: 100%;
@@ -245,31 +248,8 @@ html {
 }
 
 
-/* scroll arrow */
-.scroll_arrow_home_1 {
-    position: absolute;
-    top: 900px;
-    left: 932px;
-}
 
-#page2 {
-    padding: 100px;
-}
-
-.home_page2 {
-    position: absolute;
-    top: 1247px;
-}
-
-.home_page2_icon {
-    position: relative;
-    background-repeat: no-repeat;
-    background-image: url("artwork/teamwork_icon.png");
-    left: 959px;
-    top: 1450px;
-    height: 1000px;
-    width: 49%;
-}
+/* allgemein */
 .Topic_header {
     font-family: rockwell-nova,sans-serif;
     font-style: regular;
@@ -292,76 +272,75 @@ html {
     border-radius: 30px;
 }
 
-/* scroll arrow 2 */
+/* scroll arrow -> Page 2*/
+.scroll_arrow_home_1 {
+    position: absolute;
+    top: 900px;
+    left: 932px;
+}
+/* scroll arrow -> Page 3 */
 .scroll_arrow_home_2 {
     position: absolute;
     top: 2170px;
     left: 931px;
 }
+/* scroll arrow -> Page 4 */
+.scroll_arrow_home_3 {
+    top: 3250px;
+    position: absolute;
 
-#page3 {
-    padding-left: 100px;
 }
+
+/* icon */
+
+.icon {
+    position: relative;
+    background-repeat: no-repeat;
+    height: 1000px;
+    width: 50%;
+}
+.home_page2_icon {
+    background-image: url("artwork/teamwork_icon.png");
+}
+.home_page3_icon {
+    background-image: url("artwork/join_icon.png");
+}
+.home_page4_icon {
+    background-image: url("artwork/actual_join_icon.png");
+}
+
+.home_page2 {
+    overflow: auto;
+    padding: 100px;
+    position: absolute;
+    top: 1247px;
+    
+}
+
 .home_page3 {
+    padding-left: 100px;
+    overflow: auto;
     position: absolute;
     top: 2397px;
 }
-.home_page3_icon {
-    position: relative;
-    background-repeat: no-repeat;
-    background-image: url("artwork/join_icon.png");
-    left: 959px;
-    top: 1497px;
-    height: 600px;
-    width: 49%;
-}
-
-
-/* scroll arrow 3 */
-.scroll_arrow_home_3 {
-    position: absolute;
-    top: 3250px;
-    left: 931px;
-}
-
-/* page 4 */
-
-#page4 {
-    padding-left: 100px;
-    padding-top: -50px;
-}
 
 .home_page4 {
+    padding-left: 100px;
+    padding-top: -50px;
+    overflow: auto;
     position: absolute;
     top: 3550px;
 }
 
-.home_page4_icon {
-    position: relative;
-    background-repeat: no-repeat;
-    background-image: url("artwork/actual_join_icon.png");
-    left: 959px;
-    top: 2050px;
-    height: 600px;
-    width: 49%;
-}
-
 /* footer */
-
-.footer {
-    position: relative;
-    width: 100%;
-  }
-
 
 .footer_links {
     position: relative;
+    top: 100px;
     z-index: 10;
-    margin-top: 10%;
-    top: -120px;
-    float: right;
-    margin-right: 10px;
     padding: 0 10px;
+    margin-right: 20px;
+    float: right;
     color: var(--lightblue);
     text-decoration: none;
     font-family: rockwell-nova,sans-serif;
@@ -374,16 +353,22 @@ html {
     color: var(--nicePink);
     text-shadow: 0px 0px 20px var(--nicePink);
 }
-.footer_box_container  {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-.footer_box {
-    position: absolute;
-    width: 100%;
-}
 
+.footer_box {
+    position: relative;
+    left: 0;
+    bottom: -140rem;
+    margin-top: 5px;
+    width: 100%;
+}
+.footer_box_svg {
+    position: relative;
+    left: 0;
+    transform: scale(1,1.1);
+    -moz-transform: scale(1,1.1);
+    -webkit--transform: scale(1,1.1);
+    -ms-transform: scale(1,1.1);
+}
 /* --------------------------------------------------------------- */
 
 
