--- a/site/style.css
+++ b/site/style.css
@@ -268,8 +268,8 @@ html {
 /* scroll arrows */
 
 .arrow {
-    position: absolute;
-    left: 932px;
+    position: relative;
+    left: 50%;
 }
 /* scroll arrow -> Page 2*/
 .scroll_arrow_home_1 {
@@ -287,13 +287,12 @@ html {
 /* icon */
 
 .icon {
-    position: relative;
+    position: absolute;
     overflow: visible;
     z-index: 90;
     background-color: green;
     background-repeat: no-repeat;
     height: 1000px;
-    width: 50%;
 }
 .home_page2_icon {
     background-image: url("artwork/teamwork_icon.png");
@@ -307,6 +306,7 @@ html {
 
 #pages_section {
     position: absolute;
+    background-color: red;
     width: 100%;
     box-sizing: border-box;
     top: 100%;
