--- a/site/style.css
+++ b/site/style.css
@@ -238,8 +238,8 @@ html {
     top: 100%;
     overflow: hidden;
     width: 100%;
+    height: 80%;
     position: absolute;
-    
 }
 
 /* allgemein */
@@ -277,20 +277,20 @@ html {
 }
 /* scroll arrow -> Page 3 */
 .scroll_arrow_home_2 {
-    top: 2170px;
+    top: 720px;
 }
 /* scroll arrow -> Page 4 */
 .scroll_arrow_home_3 {
-    top: 3250px;
+    top: 1650px;
 }
 
 /* icon */
 
 .icon {
-    position: relative;
+    position: absolute;
     overflow: visible;
+    left: 1000px;
     z-index: 90;
-    background-color: green;
     background-repeat: no-repeat;
     height: 1000px;
     width: 50%;
@@ -319,7 +319,6 @@ html {
 }
 
 
-
 /* footer */
 
 .footer_links {
@@ -345,7 +344,7 @@ html {
 .footer_box {
     position: relative;
     left: 0;
-    bottom: -140rem;
+    bottom: -220rem;
     margin-top: 5px;
     width: 100%;
 }
