fixes on home and added specific css styles for each html page also generalized some features

--- a/site/datenschutz_style.css
+++ b/site/datenschutz_style.css
@@ -17,3 +17,14 @@
 body {
     background-color: var(--darkpurple);
 }
+
+.font_rockwell_nova {
+    font-family: rockwell-nova,sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    font-style: normal;
+}
+
+h1 {
+    color: var(--lightblue);
+}
