--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ html {
 .font_rockwell_nova {
     font-family: rockwell-nova,sans-serif;
     font-weight: 400;
-    font-size: 40px;
+    font-size: 40vw;
     font-style: normal;
 }
 
@@ -103,8 +103,7 @@ html {
     cursor: pointer;
     position: fixed;
     top: 30px;
-    left: 90%;
-    margin-right: 50px;
+    right: 5vw;
     z-index: 1000;  
 }
 
@@ -166,31 +165,37 @@ html {
 /* Titleheader für Index */
 .titelheader {
     position: absolute;
-    width: fit-content;
-    height: 65%;
-    left: 6%;
+    max-width: 80vw;
+    left: 7%;
+    align-content: center;
+    align-self: center;
+    height: autot;
     top: 100px;
 }
 
+
+
+
 .Titel {
     position: relative;
-    max-width: 100%;
+    max-width: fit-content;
     margin-left: 2%;
     margin-top: 60px;
     color: var(--lightblue);
     font-family: rockwell-nova,sans-serif;
     font-weight: 400;
-    font-size: 90px;
+    font-size: 5vw;
     font-style: normal;
 }
 
 .subtitel {
     position: relative;
+    width: fit-content;
     margin-left: 2%;
     color: var(--lightblue);
     font-family: rockwell-nova,sans-serif;
     font-weight: 400;
-    font-size: 40px;
+    font-size: 2vw;
     font-style: normal;
 }
 
@@ -198,7 +203,7 @@ html {
 .rect {
     position: relative;
     width: 70%;
-    height: 17px;
+    height: 1vw;
     border-radius: 17px;
     background-color: var(--niceblue);
 }
@@ -214,7 +219,7 @@ html {
     transition: all 0.25s;
     font-family: rockwell-nova,sans-serif;
     font-style: regular;
-    font-size: 36px;
+    font-size: 2vw;
     color: var(--niceblue);
     background: var(--whitestwhite);
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.335);
@@ -223,6 +228,23 @@ html {
 .btn:hover{
     background: var(--niceblue);
     color: var(--lightblue);
+}
+
+@media screen and (max-width: 1800px) {
+    .titelheader {
+        left: 10vw;
+        align-content: center;
+        align-self: center;
+    }
+    .Titel {
+        font-size: 10vw;
+    }
+    .subtitel {
+        font-size: 4vw;
+    }
+    .btn {
+        font-size: 4vw;
+    }
 }
 
 /* Neustadt bg pic  */
@@ -239,7 +261,7 @@ html {
     background-image: url("images/Bremen\ pic.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 1398px;
+    height: 110vh;
     left: 0px;
 }
 
@@ -250,7 +272,7 @@ html {
     top: 100%;
     overflow: hidden;
     width: 100%;
-    height: 80%;
+    height: 100vh;
     position: absolute;
 }
 
@@ -260,7 +282,7 @@ html {
     font-style: regular;
     font-weight: 400;
     position: relative;
-    font-size: 99px;
+    font-size: 5vw;
     color: var(--niceblue);
 }
 .Topic_text {
@@ -269,12 +291,12 @@ html {
     font-style: regular;
     font-weight: 300;
     color: var(--darkerred);
-    font-size: 36px;
-    top: -70px;
-    width: 700px;
+    font-size: 2vw;
+    top: -3vw;
+    width: 40vw;
     background-color: var(--notwhite);
-    padding: 40px;
-    border-radius: 30px;
+    padding: 3vw;
+    border-radius: 3vw;
 }
 
 /* scroll arrows */
@@ -282,13 +304,19 @@ html {
 .arrow {
     position: relative;
     z-index: 90;
-    left: 50%;
+    left: 37%;
     top: 100px;
 }
+@media screen and (max-width: 1800px) {
+    .arrow  {
+        display: none;
+    }
 
+}
 /* scroll arrow -> Page 2*/
 .scroll_arrow_home_1 {
     top: 85vh;
+    display: none;
 }
 
 /* icon */
@@ -297,14 +325,19 @@ html {
     position: absolute;
     left: 100%;
     float: right;
-    width: 100%;
 }
+
 
 .page2_icon {
     width: auto;
     height: auto;
 }
 
+@media screen and (max-width: 1800px) {
+    .icon, .page2_icon, .scroll_arrow_home_2, .scroll_arrow_home_3 {
+        display: none;
+    }
+}
 
 #pages_section {
     position: absolute;
@@ -318,7 +351,7 @@ html {
     overflow: visible;
     width: min-content;
     position: relative;
-    padding: 100px;
+    padding: 5vw;
 }
 
 
